# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.b4f310b  CMakePresets.json  HelloTriangle.cpp  HelloWindow.cpp  common.cpp  common.hpp  config.h.in  glad.c  vcpkg.json
AdvGLSL/: CMakeLists.txt  advglslconf.hpp.in  fragcoord.fs  fragcoord.vs  frontfacing.fs  frontfacing.vs  points.cpp  points.fs  points.vs
AdvancedOpenGL/: CMakeLists.txt  advconf.hpp.in  bdshader.fs  bdshader.vs  blending_discard.cpp  demo.cpp  faceculling.cpp  fcshader.fs  fcshader.vs  shader.fs  stencil.cpp  stencil_shader1.fs  stencil_shader2.fs
AdvancedOpenGL/Framebuffers/: CMakeLists.txt  demo.cpp  screenshader.fs  screenshader.vs  shader.fs  shader.vs
AdvancedOpenGL/Framebuffers/Exercises/: 1.cpp  CMakeLists.txt  screenshader.vs  shader.fs  shader.vs
Camera/: CMakeLists.txt  Camera.cpp  CameraDemo.cpp  camera.h  camera.hpp  texture.fs  texture.vs
Camera/Exercises/: 1.cpp  2.cpp  CMakeLists.txt  shader1.fs  shader1.vs  shader2.fs  shader2.vs
CoordinateSystems/: CMakeLists.txt  CoordinateSystems.cpp  texture.fs  texture1.vs  texture2.vs
CoordinateSystems/Exercises/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  texture1.fs  texture1.vs  texture3.fs  texture3.vs
Cubemaps/: CMakeLists.txt  advconf.hpp.in  cubemapsconf.hpp.in  demo.cpp  reflection.cpp  refshader.fs  refshader.vs  shader.vs  skyshader.fs  skyshader.vs  skyshader1.fs  skyshader1.vs
HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp
HelloTriangle/Exercies/: 1.cpp  3.cpp  CMakeLists.txt
HelloTriangle/Exercises/: 2.cpp  3.cpp  CMakeLists.txt
Lighting/Casters/: CMakeLists.txt  CastersDirectional.cpp  CastersSpotlight.cpp  directional_shader.fs  directional_shader.vs  litshader.fs  litshader.vs  spotlight_shader.fs
Lighting/Maps/: CMakeLists.txt  MapsDemo.cpp  lit_shader.fs  obj_shader.fs
Lighting/Maps/Exercises/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  lit_shader1.fs  lit_shader2.fs  lit_shader3.fs  obj_shader1.fs  obj_shader1.vs  obj_shader2.fs  obj_shader3.fs  obj_shader3.vs
Lighting/Materials/: CMakeLists.txt  MaterialsDemo.cpp  obj_shader.fs  obj_shader.vs
Lighting/Materials/Exercises/: 1.cpp  2.cpp  CMakeLists.txt  lit_shader1.fs  lit_shader2.fs  obj_shader1.fs  obj_shader1.vs  obj_shader2.fs  obj_shader2.vs
Lighting/MultipleLights/: CMakeLists.txt  MultipleLights.cpp  litshader.fs  shader.fs  shader.vs
Lighting/MultipleLights/Exercises/: 1.cpp  CMakeLists.txt  litshader.fs  shader.fs
Lighting/colors/: BasicLightingDiffuse.cpp  CMakeLists.txt  ColorsDemo.cpp  lit_shader.fs  obj_shader.fs  obj_shader.vs  shader.fs  shader.vs
Lighting/colors/Exercises/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  lit_shader1.fs  lit_shader3.fs  lit_shader3.vs  obj_shader1.fs  obj_shader1.vs  obj_shader2.fs  obj_shader2.vs  obj_shader3.fs  obj_shader3.vs  obj_shader4.fs  obj_shader4.vs
ModelLoading/: CMakeLists.txt  demo.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.fs  shader.vs
Shaders/: CMakeLists.txt  Shaders.cpp  shader.cpp  shader.h  shader.hpp  shaderpos.fs  shaderpos.vs  uniformright.vs  upsidedown.vs
Shaders/Exercises/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
Textures/: CMakeLists.txt  Textures.cpp  texture.fs  texture.vs
Textures/Exercises/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  texture1.fs  texture1.vs  texture2.fs  texture2.vs  texture3.fs  texture4.fs  texture4.vs
Transformations/: CMakeLists.txt  Transformations.cpp  texture.fs  texture.vs
Transformations/Exercises/: 1.cpp  2.cpp  CMakeLists.txt  texture1.fs
glad/: glad.h
